--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baseball Limits</title>
+    <title>Baseball Limits 2D</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://d3js.org/d3.v7.min.js" defer></script>
     <script src="script.js" defer></script>
@@ -23,7 +23,7 @@
         
         <div class="panel right">
             <div class="section top">
-                <h3>Baseball Limits</h3>
+                <h3>Baseball Limits 2D</h3>
             </div>
             <div class="section middle">
                 <h3>Options</h3>
