Add PA min selector

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
                         <!-- e-year options will be rendered here -->
                     </select>
                 </div>
+                <div class="form-group">
+                    <label for="pa-min-select">Min PA:</label>
+                    <select id="pa-min-select">
+                        <!-- pa-min options will be rendered here -->
+                    </select>
+                </div>
             </div>
             <div class="section bottom">
                 <!-- <h3>Instructions ...</h3> -->
